--- a/Yongchuan-Sports-Center-Management-System/src/main/resources/application.properties
+++ b/Yongchuan-Sports-Center-Management-System/src/main/resources/application.properties
@@ -45,3 +45,12 @@ spring.redis.timeout=1000
 
 #控制台打印sql
 logging.level.com.cqwu.graduation.mapper=debug
+
+server.connectionTimeout =180000
+
+#最大文件大小。值可以使用后缀“MB”或“KB”。指示兆字节或千字节大小。
+spring.servlet.multipart.max-file-size=-1
+# 最大请求大小可以是mb也可以是kb
+spring.servlet.multipart.max-request-size=-1
+# 设置文件存放路径
+cbs.imagesPath=E:/fileUpload/
